# shadowsocks_c

./: CMakeLists.txt  README.md
cmake/: FindCheck.cmake
src/: CMakeLists.txt  asyncdns.c  asyncdns.h  common.c  common.h  daemon.c  daemon.h  encrypt.c  encrypt.h  eventloop.c  eventloop.h  local.c  log.c  log.h  server.c  shell.c  shell.h  tcprelay.c  tcprelay.h  udprelay.c  udprelay.h
src/json/: cJSON.c  cJSON.h
src/utils/: fd_map.c  fd_map.h  lru_cache.c  lru_cache.h
